--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
       <div id="cube">
         <div>
           <img
-            src="https://m.baidu.com/sf/vsearch?pd=image_content&word=%E7%88%B1%E5%BF%83%E5%9B%BE%E7%89%87&tn=vsearch&atn=mediacy&fr=alawise&sa=vs_ala_img_datu&imgtype=0&imgcontent=%7B%22materialQuery%22%3A%22%22%2C%22subjectJson%22%3A%7B%7D%7D&imgpn=0&imgspn=undefined&mediacyKey=undefined&tt=1&di=7146857200093233153&pi=0&cs=382805456%2C2323453086&bdtype=0&objurl=https%3A%2F%2Fgimg2.baidu.com%2Fimage_search%2Fsrc%3Dhttp%253A%252F%252Fpic.90sjimg.com%252Fdesign%252F01%252F25%252F27%252F46%252F5961a65e9bbe3.png%26refer%3Dhttp%253A%252F%252Fpic.90sjimg.com%26app%3D2002%26size%3Df9999%2C10000%26q%3Da80%26n%3D0%26g%3D0n%26fmt%3Dauto%3Fsec%3D1668939258%26t%3D32525d3adf71ab82bb0ae39253eaa5a1&imgos=3846712021%2C1171427642&imgis=0%2C0&isRecFrClick=0"
+            src="https://image.16pic.com/00/24/02/16pic_2402686_s.jpg?imageView2/0/format/png"
             style="width: 50px; height: 50px"
           />
         </div>
