--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       body {
         background: black;
         perspective: 1000px;
-        background: url("https://upload.wikimedia.org/wikipedia/commons/a/a2/1121098-pink-nature-wallpaper-1920x1080-lockscreen.jpg")
-          no-repeat 100%;
+        background: url("")
+          no-repeat center/100%;
       }
       body,
       html {
