--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       body {
         background: black;
         perspective: 1000px;
-        background: url("")
+        background: url("https://upload.wikimedia.org/wikipedia/commons/a/a2/1121098-pink-nature-wallpaper-1920x1080-lockscreen.jpg")
           no-repeat center/100%;
       }
       body,
