--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
         </div>
         <div>
           <img
-            src="https://image.16pic.com/00/24/02/16pic_2402686_s.jpg?imageView2/0/format/png"
+            src="https://upload.wikimedia.org/wikipedia/commons/a/a2/1121098-pink-nature-wallpaper-1920x1080-lockscreen.jpg"
             style="width: 50px; height: 50px"
           />
         </div>
